--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Input Label Animaton | CoderGirl</title>
-  <!---Custom CSS File--->
-  <link rel="stylesheet" href="TelaCadastro.css">
-</head>
-<body>
-  <div class="input-field">
-    <input type="text" required spellcheck="false"> 
-    <label>Enter email</label>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Cadastrar</title>
+    <!---Custom CSS File--->
+    <link rel="stylesheet" href="TelaCadastro.css" />
+  </head>
+  <body>
+    
+  </body>
 </html>
