--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -59,25 +59,19 @@
             <div id="emailHelp" class="form-text"></div>
 
             <!--LABEL SENHA-->
-            <div class="w-100 input-field">
+            <div class="mt-4 w-100 input-field" >
               <label for="exampleInputPassword1" class="form-label"
                 >Password</label
               >
-            </div>
-            <div class="input-group">
               <input
                 spellcheck="false"
                 type="password"
+                autocomplete="off"
                 required
                 class="form-control"
-                id="exampleInputPassword1"
+                id="input-password"
               />
-              <button
-                class="btn btn-outline-secondary btn-visibility"
-                type="button"
-              >
-                <img src="/public/images/visibility.svg" alt="" />
-              </button>
+          
             </div>
           </div>
           <p>
