--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -1,15 +1,86 @@
 <!doctype html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Cadastrar</title>
-    <!---Custom CSS File--->
+    <link
+      rel="stylesheet"
+      href="responsive.css"
+      media="screen and (max-width:360px)"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="TelaCadastro.css" />
+    <title>teste</title>
   </head>
   <body>
-    
+    <main>
+      <!-- container imagem -->
+      <div class="img-responsive container-img">
+        <img
+          src="/orange-juice-front-end/src/pages/TelaCadastro/assets/img-cadastro.png"
+          alt="imagem-telaLogin"
+        />
+      </div>
+      <!-- container formulário -->
+
+      <div class="container-form">
+        <h5 class="mb-4">Cadastre-se</h5>
+        <form action="" class="w-100 form-sign-in">
+          <div class="input-group mb-3">
+            <label for="name-user" class="form-label">Nome</label>
+            <input
+              type="text"
+              class="w-100 form-control"
+              aria-label="first-name"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+
+          <div class="input-group mb-3 ">
+            <label for="last-name-user" class="form-label">Sobrenome</label>
+            <input
+              type="text"
+              class="w-100 form-control"
+              aria-label="last-name"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <label for="exampleInputEmail1" class="form-label"
+              >Email address</label
+            >
+            <input
+              type="email"
+              class=" w-100 form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+            <div id="emailHelp" class="form-text"></div>
+          </div>
+          <div class="input-group mb-3 ">
+            <label for="exampleInputPassword1" class="form-label"
+              >Password</label
+            >
+            <input
+              type="password"
+              class="w-100 form-control"
+              id="input-password"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-submit">
+            CADASTRAR
+          </button>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
