--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -6,7 +6,6 @@
     <link
       rel="stylesheet"
       href="responsive.css"
-      media="screen and (max-width:360px)"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -19,7 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="TelaLogin.css" />
-    <title>teste</title>
+    <title>Login</title>
   </head>
   <body>
     <main>
@@ -79,7 +78,7 @@
           </p>
 
           <button type="submit" class="btn btn-primary btn-submit">
-            Entrar
+            ENTRAR
           </button>
         </form>
       </div>
