--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -6,6 +6,7 @@
     <link
       rel="stylesheet"
       href="responsive.css"
+      media="screen and (max-width:360px)"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -64,9 +65,9 @@
               >
               <input
                 spellcheck="false"
-                type="password"
                 autocomplete="off"
                 required
+                type="password"
                 class="form-control"
                 id="input-password"
               />
