fix: caminho mais curto para imagens

--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -26,7 +26,7 @@
       <!-- container imagem -->
       <div class="img-responsive container-img">
         <img
-          src="/orange-juice-front-end/src/pages/TelaCadastro/assets/img-cadastro.png"
+          src="./assets/img-cadastro.png"
           alt="imagem-tela-cadastro"
         />
       </div>
