--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -26,7 +26,7 @@
       <!-- container imagem -->
       <div class="container-img">
         <img
-          src="\orange-juice-front-end\src\pages\TelaLogin\assets\img_login.png"
+          src="./assets/img_login.png"
           alt="imagem-telaLogin"
         />
       </div>
@@ -35,7 +35,7 @@
         <h3 class="text-begin my-4">Entre no Orange Portifólio</h3>
         <button class="btn mb-4 button-google-sign-in" type="button">
           <img
-            src="/public/images/official-buttons-sign-in-with-google-white-logo-googleg-48-dp.svg"
+            src="./assets/logo googleg 48dp.svg"
             alt="btn-google"
           />
           Entrar com Google
@@ -75,7 +75,7 @@
             </div>
           </div>
           <p>
-            <a class="link-opacity-75 link-cadastro" href="#">Cadastre-se</a>
+            <a class="link-opacity-75 link-cadastro" href="../TelaCadastro/TelaCadastro.html">Cadastre-se</a>
           </p>
 
           <button type="submit" class="btn btn-primary btn-submit">
