feat: ajustes no formulario da pagina de cadastro

--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -33,8 +33,8 @@
       <!-- container formulário -->
 
       <div class="container-form">
-        <div class="row"><h5 class="mb-4 title">Cadastre-se</h5></div>
-
+        <h5 class="mb-4 title">Cadastre-se</h5>
+        
         <form action="" class="w-100 form-sign-in">
           <!-- nome -->
           <div class="w-100 row">
