feat: Ajustes no formulário da tela de cadastro

--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -38,7 +38,7 @@
             src="/public/images/official-buttons-sign-in-with-google-white-logo-googleg-48-dp.svg"
             alt="btn-google"
           />
-          Entrar com Google
+         <div class="btn-google-title">Entrar com Google</div> 
         </button>
         <!--INICIO FORMULARIO-->
         <form class="my-4 form-login">
@@ -75,7 +75,7 @@
             </div>
           </div>
           <p>
-            <a class="link-opacity-75 link-cadastro" href="#">Cadastre-se</a>
+            <a class="link-opacity-75 link-cadastro" href="/orange-juice-front-end/src/pages/TelaCadastro/TelaCadastro.html">Cadastre-se</a>
           </p>
 
           <button type="submit" class="btn btn-primary btn-submit">
