feat: header tela de meus projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus projetos</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+
+        <div class="cabecalho__links">
+            <a href="projetos.html">
+                <img src="./assets/Logo orange.svg" alt="logo com uma laranja e escrita orange portfólio" />
+            </a>
+
+            <nav>
+                <ul class="cabecalho__lista">
+                    <li><a href="#">Meus Projetos</a></li>
+                    <li><a href="#">Descobrir</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="cabecalho__imagens">
+            <img src="./assets/Image.svg" alt="foto de perfil mulher com óculos e cabelos escuros" class="cabecalho__imagens__perfil">
+            <img src="./assets/_IconButton_.svg" alt="ícone de sino">
+        </div>
+    </header>
 </body>
 </html>
