feat: card menu meus projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -27,5 +27,21 @@
             <img src="./assets/_IconButton_.svg" alt="ícone de sino">
         </div>
     </header>
+
+    <main>
+        <section class="card-menu">
+          <div class="card-menu__card">
+            <img src="./assets/perfil-maior.svg" alt="">
+
+            <div class="card-menu__info">
+                <h2>Camila Soares</h2>
+
+                <p>Brasil</p>
+
+                <button>Adicionar Projeto</button>
+            </div>
+          </div>
+        </section>
+    </main>
 </body>
 </html>
