--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -42,6 +42,26 @@
             </div>
           </div>
         </section>
+
+        <section class="meus-projetos">
+            <p>Meus Projetos</p>
+
+            <input type="text" name="tags" id="tags" placeholder="Buscar tags">
+
+            <div class="meus-projetos__cards">
+                <div class="meus-projetos__card--ativado meus-projetos__card">
+                    <img src="./assets/collections.svg" alt="ícone arquivo">
+
+                    <p>Adicione seu primeiro projeto</p>
+
+                    <p>Compartilhe seu talento com milhares de pessoas</p>
+                </div>
+
+                <div class="meus-projetos__card"></div>
+
+                <div class="meus-projetos__card"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
