feat: aplicação da responsividade tela meus projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -10,9 +10,20 @@
     <header class="cabecalho">
 
         <div class="cabecalho__links">
-            <a href="projetos.html">
-                <img src="./assets/Logo orange.svg" alt="logo com uma laranja e escrita orange portfólio" />
-            </a>
+            <div class="cabecalho__links-icones">
+                <img src="./assets/_Icon_.svg" alt="ícone menu hamburguer" class="cabecalho__links-hamburguer" id="menu-hamburguer">
+                <nav class="cabecalho__links-dropdown" id="dropdown">
+                    <ul class="cabecalho__lista-dropdown">
+                        <li><a href="projetos.html">Meus Projetos</a></li>
+                        <li><a href="#">Descobrir</a></li>
+                        <li><a href="#">Configurações</a></li>
+                    </ul>
+                </nav>
+                
+                <a href="projetos.html">
+                    <img src="./assets/Logo orange.svg" alt="logo com uma laranja e escrita orange portfólio" />
+                </a>
+            </div>
 
             <nav>
                 <ul class="cabecalho__lista">
@@ -63,5 +74,6 @@
             </div>
         </section>
     </main>
+    <script src="./js/script.js"></script>
 </body>
 </html>
