padronizando a organização dos diretórios

--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -18,7 +18,7 @@
       href="orange-juice-front-end\src\pages\TelaCadastro\responsive.css"
       media="screen and (max-width:360px)"
     />
-    <link rel="stylesheet" href="TelaCadastro.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Cadastre-se</title>
   </head>
   <body>
