organização de diretorios e estilização de modais

--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -18,17 +18,14 @@
       href="orange-juice-front-end\src\pages\TelaCadastro\responsive.css"
       media="screen and (max-width:360px)"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/orange-juice-front-end/src/pages/TelaCadastro/css/style.css" />
     <title>Cadastre-se</title>
   </head>
   <body>
     <main>
       <!-- container imagem -->
       <div class="img-responsive container-img">
-        <img
-          src="./assets/img-cadastro.png"
-          alt="imagem-tela-cadastro"
-        />
+        <img src="./assets/img-cadastro.png" alt="imagem-tela-cadastro" />
       </div>
       <!-- container formulário -->
 
@@ -42,7 +39,7 @@
               <label for="name-user" class="form-label">Nome</label>
               <input
                 type="text"
-                class=" form-control"
+                class="form-control"
                 aria-label="first-name"
                 aria-describedby="basic-addon1"
                 spellcheck="false"
@@ -98,9 +95,13 @@
               />
             </div>
           </div>
+
           <button type="submit" class="btn btn-primary btn-submit">
             CADASTRAR
           </button>
+    
+          </div>
+
         </form>
       </div>
     </main>
