--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -88,7 +88,7 @@
         </div>
       </section>
       <!--MODAL-->
-      <dialog id="modal" class="adicionar-imagem">
+      <dialog id="modal-adc-img" class="adicionar-imagem">
         <div class="texto-adicionar"><h5>Adicionar Projetos</h5></div>
         <div class="texto-selecione">
           <p>Selecione o conteúdo que você deseja fazer upload</p>
@@ -113,14 +113,19 @@
             ></textarea>
           </form>
         </div>
-        <div class="texto-visualizar"><p>Visualizar publicação</p></div>
+        <div class="texto-visualizar">
+         <span><p id="text">Visualizar publicação</p></span> 
+        </div>
         <div class="buttons">
           <button class="button-salvar">SALVAR</button>
-          <button class="button-cancelar">CANCELAR</button>
+          <button class="button-cancelar" id="button-cancelar">CANCELAR</button>
         </div>
       </dialog>
+      <!--VISUALIZAR PROJETO-->
+      <dialog id="modal-visualizar-projeto" class="ver-projeto"></dialog>
     </main>
     <script src="./js/modal.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/visualizar-projetos.js"></script>
   </body>
 </html>
