feat: responsividade na tela de Adicionar Projetos

--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -88,10 +88,11 @@
         </div>
       </section>
       <!--MODAL-->
+
       <dialog id="modal-adc-img" class="adicionar-imagem">
-        <div class="texto-adicionar"><h5>Adicionar Projetos</h5></div>
+        <div class="texto-adicionar">Adicionar Projetos</div>
         <div class="texto-selecione">
-          <p>Selecione o conteúdo que você deseja fazer upload</p>
+          <p>Selecione o conteúdo que você <br> deseja fazer upload</p>
         </div>
         <div class="container">
           <div class="container-img">
@@ -114,15 +115,19 @@
           </form>
         </div>
         <div class="texto-visualizar">
-         <span><p id="text">Visualizar publicação</p></span> 
+          <p class="open-dialog-text" id="openModalText">
+            Visualizar publicação
+          </p>
         </div>
         <div class="buttons">
           <button class="button-salvar">SALVAR</button>
           <button class="button-cancelar" id="button-cancelar">CANCELAR</button>
         </div>
       </dialog>
-      <!--VISUALIZAR PROJETO-->
-      <dialog id="modal-visualizar-projeto" class="ver-projeto"></dialog>
+
+      <dialog id="modal-ver-img" class="visualizar-imagem">
+        <section class=""></section>
+      </dialog>
     </main>
     <script src="./js/modal.js"></script>
     <script src="./js/script.js"></script>
