feat: finalizando detalhes tel

--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -75,7 +75,7 @@
             </div>
           </div>
           <p>
-            <a class="link-opacity-75 link-cadastro" href="/orange-juice-front-end/src/pages/TelaCadastro/TelaCadastro.html">Cadastre-se</a>
+            <a class="link-opacity-75 link-cadastro" href="../TelaCadastro/TelaCadastro.html">Cadastre-se</a>
           </p>
 
           <button type="submit" class="btn btn-primary btn-submit">
