--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -129,29 +129,39 @@
       </dialog>
       <!-- MODAL VISUALIZAR IMAGEM-->
       <dialog id="modal-ver-img" class="preview">
+
+        <p class="icone-close" id="icone-close">
+          <img src="./assets/close.svg" alt="ícone close" />
+        </p>
+
         <header class="header-modal-visualizar">
+
           <div class="icon-perfil">
+
             <img src="./assets/Circle-camila-soares.svg" alt="" />
             <div class="text-name">
               <p>Camila Soares</p>
               <p>12/12</p>
             </div>
+
           </div>
+
           <div class="title-modal-visualizar-projeto">
             <p>Ecommerce One Page</p>
           </div>
-          <div class="chip-container">
-            <div class="chip"></div>
-            <div class="chip"></div>
-          </div>
-          <div class="exit-modal-visualizar">
-            <button class="close-page"></button>
+
+          <div class="tag-container">
+            <div class="tag">Tag</div>
+            <div class="tag">Tag</div>
           </div>
         </header>
+
         <main class="main-ver-img">
+
           <div class="container-img-visualizar">
             <img src="./assets/Image-preview.svg" alt="imagem preview" />
           </div>
+
           <div class="text-modal-visualizar-projeto">
             <p>
               Temos o prazer de compartilhar com vocês uma variação da nosso
@@ -160,6 +170,7 @@
               B2C e minimalista do nosso primeiro template de e-commerce.
             </p>
           </div>
+
         </main>
         <footer class="footer-ver-img">
           <div class="text-download">
