feat: adição do consumo da api da tela de Login

--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -51,7 +51,7 @@
             <input
               type="email"
               class="form-control"
-              id="exampleInputEmail1"
+              id="email-login"
               autocomplete="off"
               aria-describedby="emailHelp"
               spellcheck="false"
@@ -68,8 +68,8 @@
                 autocomplete="off"
                 required
                 type="password"
-                class="form-control"
-                id="input-password"
+                class="form-control input-password"
+                id="password-login"
               />
           
             </div>
@@ -78,7 +78,7 @@
             <a class="link-opacity-75 link-cadastro" href="../TelaCadastro/TelaCadastro.html">Cadastre-se</a>
           </p>
 
-          <button type="submit" class="btn btn-primary btn-submit">
+          <button type="submit" class="btn btn-primary btn-submit " id="botao-login">
             ENTRAR
           </button>
         </form>
