--- a/src/pages/TelaCadastro/TelaCadastro.html
+++ b/src/pages/TelaCadastro/TelaCadastro.html
@@ -18,7 +18,7 @@
       href="orange-juice-front-end\src\pages\TelaCadastro\responsive.css"
       media="screen and (max-width:360px)"
     />
-    <link rel="stylesheet" href="/orange-juice-front-end/src/pages/TelaCadastro/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>Cadastre-se</title>
   </head>
