--- a/src/pages/TelaLogin/TelaLogin.html
+++ b/src/pages/TelaLogin/TelaLogin.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/orange-juice-front-end/src/pages/TelaLogin/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Login</title>
   </head>
   <body>
@@ -84,5 +84,6 @@
         </form>
       </div>
     </main>
+    <script src="./js/api-login.js"></script>
   </body>
 </html>
