--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -104,15 +104,15 @@
               <p>Compartilhe seu talento com milhares de pessoas</p>
             </div>
           </label>
-          <form action="#" enctype="multipart/form-data">
+          <form action="#" enctype="multipart/form-data" class="formulario-projeto">
             <input type="file" name="imagens" id="imagens-file" accept="image/*" class="imagens"/>
 
-            <input type="text" placeholder="Titulo" />
-            <input type="text" placeholder="Tags" />
-            <input type="text" placeholder="Link" />
+            <input type="text" placeholder="Titulo" id="titulo-projeto" />
+            <input type="text" placeholder="Tags" id="tag-projeto" />
+            <input type="text" placeholder="Link" id="link-projeto" />
             <textarea
               name="descricao"
-              id="descricao"
+              id="descricao-projeto"
               cols="30"
               rows="10"
               placeholder="Descrição"
@@ -149,7 +149,7 @@
           </div>
 
           <div class="title-modal-visualizar-projeto">
-            <p>Ecommerce One Page</p>
+            <p id="titulo-vizualizar"></p>
           </div>
 
           <div class="tag-container">
@@ -161,23 +161,18 @@
         <main class="main-ver-img">
 
           <div class="container-img-visualizar">
-            <img src="./assets/Image-preview.svg" alt="imagem preview" />
+            <img src="" alt="" id="imagem-vizualizar">
           </div>
 
           <div class="text-modal-visualizar-projeto">
-            <p>
-              Temos o prazer de compartilhar com vocês uma variação da nosso
-              primeiro recurso gratuito, Monoceros. É um modelo de uma página
-              para mostrar seus produtos. Tentamos redesenhar uma versão mais
-              B2C e minimalista do nosso primeiro template de e-commerce.
-            </p>
+            <p id="descricao-vizualizar"></p>
           </div>
 
         </main>
         <footer class="footer-ver-img">
           <div class="text-download">
             <p>Download</p>
-            <a href="#">https://gumroad.com/products/wxCSL</a>
+            <a href="#" id="link-vizualizar"></a>
           </div>
         </footer>
       </dialog>
@@ -192,6 +187,7 @@
     </main>
     <script src="./js/dropdown.js"></script>
     <script src="./js/imagem-arquivo.js"></script>
+    <script src="./js/formulario-add-projeto.js"></script>
     <script src="./js/modal-adicionar-projetos.js"></script>
     <script src="./js/modal-visualizar-projetos.js"></script>
     <script src="./js/modal-mensagem-sucesso.js"></script>
