--- a/src/pages/TelaMeusProjetos/projetos.html
+++ b/src/pages/TelaMeusProjetos/projetos.html
@@ -143,7 +143,7 @@
             <img src="./assets/Circle-camila-soares.svg" alt="" />
             <div class="text-name">
               <p>Camila Soares</p>
-              <p>12/12</p>
+              <p id="data-vizualizar"></p>
             </div>
 
           </div>
@@ -152,9 +152,8 @@
             <p id="titulo-vizualizar"></p>
           </div>
 
-          <div class="tag-container">
-            <div class="tag">Tag</div>
-            <div class="tag">Tag</div>
+          <div class="tag-container" id="tag-vizualizar">
+        
           </div>
         </header>
 
