feat: criação da main e do buscar tags

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -58,9 +58,31 @@
                 </div>
             </a>
         </div>
+    </header>
+    <!-- inicio do main -->
+    <main onclick="fechaMenu()">
+        <!-- texto principal da pagina -->
+        <div class="texto">
+            <h4>Junte-se à comunidade de inovação, inspiração e descobertas, transformando experiências em conexões inesquecíveis</h4>
+        </div>
+
+        <!-- container principal -->
+        <div class="container">
+            <!-- input de buscar tags -->
+            <div class="buscatag">
+                <input type="text" name="" id="buscarTags" placeholder="Buscar tags">
+            </div>
+            <!-- lugar de exibir os projetos -->
+            <div class="exibirprojetos">
+                <div class="projeto"></div>
+                <div class="projeto"></div>
+                <div class="projeto"></div>
+             </div>
+        </div>
+    </main>
 
     <!-- código JS -->
     <script src="./js/menu.js"> </script>
 
-    </header>
 </body>
+</html>
