fix: responsividade da tela descobrir

--- a/src/pages/TelaDescobrir/TelaDescobrir.html
+++ b/src/pages/TelaDescobrir/TelaDescobrir.html
@@ -74,7 +74,7 @@
             </div>
             <!-- lugar de exibir os projetos -->
             <div class="exibirprojetos">
-                <div class="projeto"></div>
+                <!-- <div class="projeto"></div> -->
                 <div class="projeto"></div>
                 <div class="projeto"></div>
              </div>
